--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,9 @@ dependencies:
     sdk: flutter
   http: 0.12.2
   dio: 3.0.7
-
+  intl: ^0.16.1
+  webview_flutter: ^0.3.22+1
+  logger: ^0.9.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
